--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Guidomia-X</string>
     <string name="guidomia">Guidomia</string>
+    <string name="get_yours_now">Get your\'s now</string>
+    <string name="tacoma_2021">Tacoma 2021</string>
+    <string name="filter">Filter</string>
+    <string name="price_placeholder">Price: %s k</string>
 </resources>
