--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="tacoma_2021">Tacoma 2021</string>
     <string name="filter">Filter</string>
     <string name="price_placeholder">Price: %s k</string>
+    <string name="car_image">Car Image</string>
+    <string name="menu_icon">Menu Icon</string>
+    <string name="any_make">any make</string>
+    <string name="any_model">any model</string>
 </resources>
